--- a/src/public/themes/theme2/part-pkg/rack/view.html
+++ b/src/public/themes/theme2/part-pkg/rack/view.html
@@ -24,6 +24,12 @@
                         <div class="row">
                             <div class="col-md-3 col-sm-6">
                                 <div class="input-text form-group">
+                                    <label>Outlet</label>
+                                    <span class="view-data-list-value">{{$ctrl.rack.outlet_name}}</span>
+                                </div><!-- Field -->
+                            </div>
+                            <div class="col-md-3 col-sm-6">
+                                <div class="input-text form-group">
                                     <label>Type</label>
                                     <span class="view-data-list-value">{{$ctrl.rack.type_name}}</span>
                                 </div><!-- Field -->
