--- a/src/public/themes/theme2/part-pkg/part/list.html
+++ b/src/public/themes/theme2/part-pkg/part/list.html
@@ -58,7 +58,7 @@
                                 <th>Name</th>
                                 <th>UOM</th>
                                 <th>Tax code</th>
-                                <th>Rate</th>
+                                <th>MRP</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
