Add outlet in Rack list

--- a/src/public/themes/theme2/part-pkg/rack/list.html
+++ b/src/public/themes/theme2/part-pkg/rack/list.html
@@ -3,6 +3,7 @@
         <thead>
             <tr>
                 <th>Action</th>
+                <th>Outlet</th>
                 <th>Type</th>
                 <th>Name</th>
                 <th>Status</th>
@@ -29,12 +30,6 @@
                                 <div class="custom-radio-select total-radio-select">
                                     <input id="all_date" name="all_date" type="radio" ng-click="onClickAll()">
                                     <label for="all_date">All</label>
-                                </div>
-                            </li>
-                            <li class="list-item-content radio-block md-radio-block">
-                                <div class="custom-radio-select">
-                                    <input id="today" name="today" type="radio" value="{{$ctrl.current_date}}">
-                                    <label for="today">Today</label>
                                 </div>
                             </li>
                             <li class="list-item-content radio-content-block md-radio-content-block">
