Rack bug fixing

--- a/src/public/themes/theme2/part-pkg/rack/list.html
+++ b/src/public/themes/theme2/part-pkg/rack/list.html
@@ -32,6 +32,12 @@
                                     <label for="all_date">All</label>
                                 </div>
                             </li>
+                            <li class="list-item-content radio-block md-radio-block">
+                                <div class="custom-radio-select">
+                                    <input id="today" name="today" type="radio" value="">
+                                    <label for="today">Today</label>
+                                </div>
+                            </li>
                             <li class="list-item-content radio-content-block md-radio-content-block">
                                 <div class="input-text form-group">
                                     <div class="input-group date" data-provide="datepickerrange">
